src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    EOL
    ESPECIAL
    LBRA
    LCBRA
    MATHEXPR
    QUOTE
    RBRA
    RCBRA
    RES
    WHITESPACE

Grammar

Rule 0     S' -> programa
Rule 1     programa -> variable begin expresiones end procedimientos
Rule 2     begin -> BEGIN
Rule 3     end -> END
Rule 4     variable -> variable1 var1
Rule 5     var1 -> variable1 variable
Rule 6     var1 -> epsilon
Rule 7     variable1 -> VAR ID ASSIGN NUM SEMICOLON
Rule 8     variable1 -> VAR ID SEMICOLON
Rule 9     expresiones -> asignar expresiones
Rule 10    expresiones -> actualizar expresiones
Rule 11    expresiones -> cambiar_direccion expresiones
Rule 12    expresiones -> colocar expresiones
Rule 13    expresiones -> elevar expresiones
Rule 14    expresiones -> encender expresiones
Rule 15    expresiones -> mover expresiones
Rule 16    expresiones -> pos_inicio expresiones
Rule 17    expresiones -> llamar expresiones
Rule 18    expresiones -> c_keep expresiones
Rule 19    expresiones -> c_for expresiones
Rule 20    expresiones -> c_when expresiones
Rule 21    expresiones -> skip expresiones
Rule 22    skip -> SKIP SEMICOLON
Rule 23    expresiones -> COMMENT expresiones
Rule 24    expresiones -> endproc procedimientos
Rule 25    endproc -> ENDPROC SEMICOLON
Rule 26    expresiones -> whend expresiones
Rule 27    expresiones -> epsilon
Rule 28    c_for -> FOR ID ASSIGN NUM TIMES
Rule 29    expresiones -> fend expresiones
Rule 30    fend -> FEND SEMICOLON
Rule 31    c_when -> WHEN ID ASSIGN NUM THEN
Rule 32    whend -> WHEND SEMICOLON
Rule 33    c_keep -> KEEP
Rule 34    expresiones -> kend expresiones
Rule 35    kend -> KEND SEMICOLON
Rule 36    asignar -> SET ID ASSIGN NUM SEMICOLON
Rule 37    actualizar -> ADD SUM ID SEMICOLON
Rule 38    actualizar -> LESS SUM ID SEMICOLON
Rule 39    cambiar_direccion -> CHANGEDIR LPAR LEFT RPAR SEMICOLON
Rule 40    cambiar_direccion -> CHANGEDIR LPAR RIGHT RPAR SEMICOLON
Rule 41    cambiar_direccion -> CHANGEDIR LPAR BACK RPAR SEMICOLON
Rule 42    cambiar_direccion -> CHANGEDIR LPAR SAME RPAR SEMICOLON
Rule 43    colocar -> PLACE BLOCK SEMICOLON
Rule 44    colocar -> PLACE BLOCK NUM SEMICOLON
Rule 45    elevar -> HIGH BLOCK SEMICOLON
Rule 46    elevar -> HIGH BLOCK NUM SEMICOLON
Rule 47    encender -> PUT LIGHT SEMICOLON
Rule 48    mover -> POS LPAR NUM COMMA NUM RPAR SEMICOLON
Rule 49    pos_inicio -> POSSTART LPAR NUM COMMA NUM RPAR SEMICOLON
Rule 50    llamar -> CALL ID
Rule 51    procedimientos -> procs expresiones
Rule 52    procs -> PROC ID
Rule 53    procs -> epsilon
Rule 54    epsilon -> <empty>

Terminals, with rules where they appear

ADD                  : 37
ASSIGN               : 7 28 31 36
BACK                 : 41
BEGIN                : 2
BLOCK                : 43 44 45 46
CALL                 : 50
CHANGEDIR            : 39 40 41 42
COMMA                : 48 49
COMMENT              : 23
END                  : 3
ENDPROC              : 25
EOL                  : 
ESPECIAL             : 
FEND                 : 30
FOR                  : 28
HIGH                 : 45 46
ID                   : 7 8 28 31 36 37 38 50 52
KEEP                 : 33
KEND                 : 35
LBRA                 : 
LCBRA                : 
LEFT                 : 39
LESS                 : 38
LIGHT                : 47
LPAR                 : 39 40 41 42 48 49
MATHEXPR             : 
NUM                  : 7 28 31 36 44 46 48 48 49 49
PLACE                : 43 44
POS                  : 48
POSSTART             : 49
PROC                 : 52
PUT                  : 47
QUOTE                : 
RBRA                 : 
RCBRA                : 
RES                  : 
RIGHT                : 40
RPAR                 : 39 40 41 42 48 49
SAME                 : 42
SEMICOLON            : 7 8 22 25 30 32 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49
SET                  : 36
SKIP                 : 22
SUM                  : 37 38
THEN                 : 31
TIMES                : 28
VAR                  : 7 8
WHEN                 : 31
WHEND                : 32
WHITESPACE           : 
error                : 

Nonterminals, with rules where they appear

actualizar           : 10
asignar              : 9
begin                : 1
c_for                : 19
c_keep               : 18
c_when               : 20
cambiar_direccion    : 11
colocar              : 12
elevar               : 13
encender             : 14
end                  : 1
endproc              : 24
epsilon              : 6 27 53
expresiones          : 1 9 10 11 12 13 14 15 16 17 18 19 20 21 23 26 29 34 51
fend                 : 29
kend                 : 34
llamar               : 17
mover                : 15
pos_inicio           : 16
procedimientos       : 1 24
procs                : 51
programa             : 0
skip                 : 21
var1                 : 4
variable             : 1 5
variable1            : 4 5
whend                : 26

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . variable begin expresiones end procedimientos
    (4) variable -> . variable1 var1
    (7) variable1 -> . VAR ID ASSIGN NUM SEMICOLON
    (8) variable1 -> . VAR ID SEMICOLON

    VAR             shift and go to state 4

    programa                       shift and go to state 1
    variable                       shift and go to state 2
    variable1                      shift and go to state 3

state 1

    (0) S' -> programa .



state 2

    (1) programa -> variable . begin expresiones end procedimientos
    (2) begin -> . BEGIN

    BEGIN           shift and go to state 6

    begin                          shift and go to state 5

state 3

    (4) variable -> variable1 . var1
    (5) var1 -> . variable1 variable
    (6) var1 -> . epsilon
    (7) variable1 -> . VAR ID ASSIGN NUM SEMICOLON
    (8) variable1 -> . VAR ID SEMICOLON
    (54) epsilon -> .

    VAR             shift and go to state 4
    BEGIN           reduce using rule 54 (epsilon -> .)

    variable1                      shift and go to state 7
    var1                           shift and go to state 8
    epsilon                        shift and go to state 9

state 4

    (7) variable1 -> VAR . ID ASSIGN NUM SEMICOLON
    (8) variable1 -> VAR . ID SEMICOLON

    ID              shift and go to state 10


state 5

    (1) programa -> variable begin . expresiones end procedimientos
    (9) expresiones -> . asignar expresiones
    (10) expresiones -> . actualizar expresiones
    (11) expresiones -> . cambiar_direccion expresiones
    (12) expresiones -> . colocar expresiones
    (13) expresiones -> . elevar expresiones
    (14) expresiones -> . encender expresiones
    (15) expresiones -> . mover expresiones
    (16) expresiones -> . pos_inicio expresiones
    (17) expresiones -> . llamar expresiones
    (18) expresiones -> . c_keep expresiones
    (19) expresiones -> . c_for expresiones
    (20) expresiones -> . c_when expresiones
    (21) expresiones -> . skip expresiones
    (23) expresiones -> . COMMENT expresiones
    (24) expresiones -> . endproc procedimientos
    (26) expresiones -> . whend expresiones
    (27) expresiones -> . epsilon
    (29) expresiones -> . fend expresiones
    (34) expresiones -> . kend expresiones
    (36) asignar -> . SET ID ASSIGN NUM SEMICOLON
    (37) actualizar -> . ADD SUM ID SEMICOLON
    (38) actualizar -> . LESS SUM ID SEMICOLON
    (39) cambiar_direccion -> . CHANGEDIR LPAR LEFT RPAR SEMICOLON
    (40) cambiar_direccion -> . CHANGEDIR LPAR RIGHT RPAR SEMICOLON
    (41) cambiar_direccion -> . CHANGEDIR LPAR BACK RPAR SEMICOLON
    (42) cambiar_direccion -> . CHANGEDIR LPAR SAME RPAR SEMICOLON
    (43) colocar -> . PLACE BLOCK SEMICOLON
    (44) colocar -> . PLACE BLOCK NUM SEMICOLON
    (45) elevar -> . HIGH BLOCK SEMICOLON
    (46) elevar -> . HIGH BLOCK NUM SEMICOLON
    (47) encender -> . PUT LIGHT SEMICOLON
    (48) mover -> . POS LPAR NUM COMMA NUM RPAR SEMICOLON
    (49) pos_inicio -> . POSSTART LPAR NUM COMMA NUM RPAR SEMICOLON
    (50) llamar -> . CALL ID
    (33) c_keep -> . KEEP
    (28) c_for -> . FOR ID ASSIGN NUM TIMES
    (31) c_when -> . WHEN ID ASSIGN NUM THEN
    (22) skip -> . SKIP SEMICOLON
    (25) endproc -> . ENDPROC SEMICOLON
    (32) whend -> . WHEND SEMICOLON
    (54) epsilon -> .
    (30) fend -> . FEND SEMICOLON
    (35) kend -> . KEND SEMICOLON

    COMMENT         shift and go to state 25
    SET             shift and go to state 31
    ADD             shift and go to state 32
    LESS            shift and go to state 33
    CHANGEDIR       shift and go to state 34
    PLACE           shift and go to state 35
    HIGH            shift and go to state 36
    PUT             shift and go to state 37
    POS             shift and go to state 38
    POSSTART        shift and go to state 39
    CALL            shift and go to state 40
    KEEP            shift and go to state 41
    FOR             shift and go to state 42
    WHEN            shift and go to state 43
    SKIP            shift and go to state 44
    ENDPROC         shift and go to state 45
    WHEND           shift and go to state 46
    END             reduce using rule 54 (epsilon -> .)
    FEND            shift and go to state 47
    KEND            shift and go to state 48

    expresiones                    shift and go to state 11
    asignar                        shift and go to state 12
    actualizar                     shift and go to state 13
    cambiar_direccion              shift and go to state 14
    colocar                        shift and go to state 15
    elevar                         shift and go to state 16
    encender                       shift and go to state 17
    mover                          shift and go to state 18
    pos_inicio                     shift and go to state 19
    llamar                         shift and go to state 20
    c_keep                         shift and go to state 21
    c_for                          shift and go to state 22
    c_when                         shift and go to state 23
    skip                           shift and go to state 24
    endproc                        shift and go to state 26
    whend                          shift and go to state 27
    epsilon                        shift and go to state 28
    fend                           shift and go to state 29
    kend                           shift and go to state 30

state 6

    (2) begin -> BEGIN .

    COMMENT         reduce using rule 2 (begin -> BEGIN .)
    SET             reduce using rule 2 (begin -> BEGIN .)
    ADD             reduce using rule 2 (begin -> BEGIN .)
    LESS            reduce using rule 2 (begin -> BEGIN .)
    CHANGEDIR       reduce using rule 2 (begin -> BEGIN .)
    PLACE           reduce using rule 2 (begin -> BEGIN .)
    HIGH            reduce using rule 2 (begin -> BEGIN .)
    PUT             reduce using rule 2 (begin -> BEGIN .)
    POS             reduce using rule 2 (begin -> BEGIN .)
    POSSTART        reduce using rule 2 (begin -> BEGIN .)
    CALL            reduce using rule 2 (begin -> BEGIN .)
    KEEP            reduce using rule 2 (begin -> BEGIN .)
    FOR             reduce using rule 2 (begin -> BEGIN .)
    WHEN            reduce using rule 2 (begin -> BEGIN .)
    SKIP            reduce using rule 2 (begin -> BEGIN .)
    ENDPROC         reduce using rule 2 (begin -> BEGIN .)
    WHEND           reduce using rule 2 (begin -> BEGIN .)
    FEND            reduce using rule 2 (begin -> BEGIN .)
    KEND            reduce using rule 2 (begin -> BEGIN .)
    END             reduce using rule 2 (begin -> BEGIN .)


state 7

    (5) var1 -> variable1 . variable
    (4) variable -> . variable1 var1
    (7) variable1 -> . VAR ID ASSIGN NUM SEMICOLON
    (8) variable1 -> . VAR ID SEMICOLON

    VAR             shift and go to state 4

    variable1                      shift and go to state 3
    variable                       shift and go to state 49

state 8

    (4) variable -> variable1 var1 .

    BEGIN           reduce using rule 4 (variable -> variable1 var1 .)


state 9

    (6) var1 -> epsilon .

    BEGIN           reduce using rule 6 (var1 -> epsilon .)


state 10

    (7) variable1 -> VAR ID . ASSIGN NUM SEMICOLON
    (8) variable1 -> VAR ID . SEMICOLON

    ASSIGN          shift and go to state 50
    SEMICOLON       shift and go to state 51


state 11

    (1) programa -> variable begin expresiones . end procedimientos
    (3) end -> . END

    END             shift and go to state 53

    end                            shift and go to state 52

state 12

    (9) expresiones -> asignar . expresiones
    (9) expresiones -> . asignar expresiones
    (10) expresiones -> . actualizar expresiones
    (11) expresiones -> . cambiar_direccion expresiones
    (12) expresiones -> . colocar expresiones
    (13) expresiones -> . elevar expresiones
    (14) expresiones -> . encender expresiones
    (15) expresiones -> . mover expresiones
    (16) expresiones -> . pos_inicio expresiones
    (17) expresiones -> . llamar expresiones
    (18) expresiones -> . c_keep expresiones
    (19) expresiones -> . c_for expresiones
    (20) expresiones -> . c_when expresiones
    (21) expresiones -> . skip expresiones
    (23) expresiones -> . COMMENT expresiones
    (24) expresiones -> . endproc procedimientos
    (26) expresiones -> . whend expresiones
    (27) expresiones -> . epsilon
    (29) expresiones -> . fend expresiones
    (34) expresiones -> . kend expresiones
    (36) asignar -> . SET ID ASSIGN NUM SEMICOLON
    (37) actualizar -> . ADD SUM ID SEMICOLON
    (38) actualizar -> . LESS SUM ID SEMICOLON
    (39) cambiar_direccion -> . CHANGEDIR LPAR LEFT RPAR SEMICOLON
    (40) cambiar_direccion -> . CHANGEDIR LPAR RIGHT RPAR SEMICOLON
    (41) cambiar_direccion -> . CHANGEDIR LPAR BACK RPAR SEMICOLON
    (42) cambiar_direccion -> . CHANGEDIR LPAR SAME RPAR SEMICOLON
    (43) colocar -> . PLACE BLOCK SEMICOLON
    (44) colocar -> . PLACE BLOCK NUM SEMICOLON
    (45) elevar -> . HIGH BLOCK SEMICOLON
    (46) elevar -> . HIGH BLOCK NUM SEMICOLON
    (47) encender -> . PUT LIGHT SEMICOLON
    (48) mover -> . POS LPAR NUM COMMA NUM RPAR SEMICOLON
    (49) pos_inicio -> . POSSTART LPAR NUM COMMA NUM RPAR SEMICOLON
    (50) llamar -> . CALL ID
    (33) c_keep -> . KEEP
    (28) c_for -> . FOR ID ASSIGN NUM TIMES
    (31) c_when -> . WHEN ID ASSIGN NUM THEN
    (22) skip -> . SKIP SEMICOLON
    (25) endproc -> . ENDPROC SEMICOLON
    (32) whend -> . WHEND SEMICOLON
    (54) epsilon -> .
    (30) fend -> . FEND SEMICOLON
    (35) kend -> . KEND SEMICOLON

    COMMENT         shift and go to state 25
    SET             shift and go to state 31
    ADD             shift and go to state 32
    LESS            shift and go to state 33
    CHANGEDIR       shift and go to state 34
    PLACE           shift and go to state 35
    HIGH            shift and go to state 36
    PUT             shift and go to state 37
    POS             shift and go to state 38
    POSSTART        shift and go to state 39
    CALL            shift and go to state 40
    KEEP            shift and go to state 41
    FOR             shift and go to state 42
    WHEN            shift and go to state 43
    SKIP            shift and go to state 44
    ENDPROC         shift and go to state 45
    WHEND           shift and go to state 46
    END             reduce using rule 54 (epsilon -> .)
    $end            reduce using rule 54 (epsilon -> .)
    FEND            shift and go to state 47
    KEND            shift and go to state 48

    asignar                        shift and go to state 12
    expresiones                    shift and go to state 54
    actualizar                     shift and go to state 13
    cambiar_direccion              shift and go to state 14
    colocar                        shift and go to state 15
    elevar                         shift and go to state 16
    encender                       shift and go to state 17
    mover                          shift and go to state 18
    pos_inicio                     shift and go to state 19
    llamar                         shift and go to state 20
    c_keep                         shift and go to state 21
    c_for                          shift and go to state 22
    c_when                         shift and go to state 23
    skip                           shift and go to state 24
    endproc                        shift and go to state 26
    whend                          shift and go to state 27
    epsilon                        shift and go to state 28
    fend                           shift and go to state 29
    kend                           shift and go to state 30

state 13

    (10) expresiones -> actualizar . expresiones
    (9) expresiones -> . asignar expresiones
    (10) expresiones -> . actualizar expresiones
    (11) expresiones -> . cambiar_direccion expresiones
    (12) expresiones -> . colocar expresiones
    (13) expresiones -> . elevar expresiones
    (14) expresiones -> . encender expresiones
    (15) expresiones -> . mover expresiones
    (16) expresiones -> . pos_inicio expresiones
    (17) expresiones -> . llamar expresiones
    (18) expresiones -> . c_keep expresiones
    (19) expresiones -> . c_for expresiones
    (20) expresiones -> . c_when expresiones
    (21) expresiones -> . skip expresiones
    (23) expresiones -> . COMMENT expresiones
    (24) expresiones -> . endproc procedimientos
    (26) expresiones -> . whend expresiones
    (27) expresiones -> . epsilon
    (29) expresiones -> . fend expresiones
    (34) expresiones -> . kend expresiones
    (36) asignar -> . SET ID ASSIGN NUM SEMICOLON
    (37) actualizar -> . ADD SUM ID SEMICOLON
    (38) actualizar -> . LESS SUM ID SEMICOLON
    (39) cambiar_direccion -> . CHANGEDIR LPAR LEFT RPAR SEMICOLON
    (40) cambiar_direccion -> . CHANGEDIR LPAR RIGHT RPAR SEMICOLON
    (41) cambiar_direccion -> . CHANGEDIR LPAR BACK RPAR SEMICOLON
    (42) cambiar_direccion -> . CHANGEDIR LPAR SAME RPAR SEMICOLON
    (43) colocar -> . PLACE BLOCK SEMICOLON
    (44) colocar -> . PLACE BLOCK NUM SEMICOLON
    (45) elevar -> . HIGH BLOCK SEMICOLON
    (46) elevar -> . HIGH BLOCK NUM SEMICOLON
    (47) encender -> . PUT LIGHT SEMICOLON
    (48) mover -> . POS LPAR NUM COMMA NUM RPAR SEMICOLON
    (49) pos_inicio -> . POSSTART LPAR NUM COMMA NUM RPAR SEMICOLON
    (50) llamar -> . CALL ID
    (33) c_keep -> . KEEP
    (28) c_for -> . FOR ID ASSIGN NUM TIMES
    (31) c_when -> . WHEN ID ASSIGN NUM THEN
    (22) skip -> . SKIP SEMICOLON
    (25) endproc -> . ENDPROC SEMICOLON
    (32) whend -> . WHEND SEMICOLON
    (54) epsilon -> .
    (30) fend -> . FEND SEMICOLON
    (35) kend -> . KEND SEMICOLON

    COMMENT         shift and go to state 25
    SET             shift and go to state 31
    ADD             shift and go to state 32
    LESS            shift and go to state 33
    CHANGEDIR       shift and go to state 34
    PLACE           shift and go to state 35
    HIGH            shift and go to state 36
    PUT             shift and go to state 37
    POS             shift and go to state 38
    POSSTART        shift and go to state 39
    CALL            shift and go to state 40
    KEEP            shift and go to state 41
    FOR             shift and go to state 42
    WHEN            shift and go to state 43
    SKIP            shift and go to state 44
    ENDPROC         shift and go to state 45
    WHEND           shift and go to state 46
    END             reduce using rule 54 (epsilon -> .)
    $end            reduce using rule 54 (epsilon -> .)
    FEND            shift and go to state 47
    KEND            shift and go to state 48

    actualizar                     shift and go to state 13
    expresiones                    shift and go to state 55
    asignar                        shift and go to state 12
    cambiar_direccion              shift and go to state 14
    colocar                        shift and go to state 15
    elevar                         shift and go to state 16
    encender                       shift and go to state 17
    mover                          shift and go to state 18
    pos_inicio                     shift and go to state 19
    llamar                         shift and go to state 20
    c_keep                         shift and go to state 21
    c_for                          shift and go to state 22
    c_when                         shift and go to state 23
    skip                           shift and go to state 24
    endproc                        shift and go to state 26
    whend                          shift and go to state 27
    epsilon                        shift and go to state 28
    fend                           shift and go to state 29
    kend                           shift and go to state 30

state 14
